[ITB-299] Corrected the theme issues (image alignment) on FF and IE.

--- a/gitb-ui/app/assets/stylesheets/css/theme-ec.css
+++ b/gitb-ui/app/assets/stylesheets/css/theme-ec.css
@@ -29,6 +29,5 @@ footer {
 }
 
 footer img {
-    zoom: 75%;
-    -moz-transform: scale(0.5);
+    height: 50px;
 }
